2008-06-20  Tim Waugh  <twaugh@redhat.com>

	* cupsppd.c (Group_repr): New method.
	(cups_GroupType): Set repr function.

	* cupsppd.c (Option_repr): New method.
	(cups_OptionType): Set repr function.

	* cupsconnection.c (Dest_repr): New method.
	(cups_DestType): Set repr function.

	* cupsconnection.c (Connection): New structure member, host.
	(Connection_init): Store connected host name.
	(Connection_dealloc): Free it.
	(Connection_repr): New method.  Include host name in repr string.
	(cups_ConnectionType): Set repr function.

	* cupsconnection.c (Connection_init): New optional arguments host,
	port, and encryption.

2008-06-17  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getPrinterAttributes): Enum-type
	attributes may be lists.

2008-05-30  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getPrinterAttributes): New
	optional requested_attributes argument.

2008-05-29  Tim Waugh  <twaugh@redhat.com>

	* configure.in: Version 1.9.39.

2008-05-29  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_authenticateJob): Allow auth
	parameter to be optional in order to allow for Kerberos
	authentication.

2008-05-27  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (free_string_list): New helper function.
	(Connection_printFiles): New method.
	Patch from Fabian Knittel.

	* cupsconnection.c (Connection_printFile): New method.  Patch from
	Fabian Knittel.

2008-04-09  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_printTestPage): Test for existence
	of testprint.ps before performing operation, and look around for
	it if necessary.

2008-04-03  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.38.

2008-04-03  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getDocument): Fixed missing
	argument to snprintf.

2008-04-01  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getFile): Allow destination to be a